--- a/index.html
+++ b/index.html
@@ -134,6 +134,8 @@
 
 
 
+
+
     </style>
 
 </head>
@@ -376,8 +378,55 @@
                     </div>
                 </div>
             </div>
-            <div class="col-4">
 
+            <div class="row">
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th scope="col">№</th>
+                        <th scope="col">Название</th>
+                        <th scope="col">Цена за шт.</th>
+                        <th scope="col">Количество</th>
+                        <th scope="col">Итого</th>
+                        <th scope="col">Статус заказа</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <th scope="row">1</th>
+                        <td>Монитор</td>
+                        <td>10 000</td>
+                        <td>1</td>
+                        <td>10 000</td>
+                        <td><div class="alert alert-primary" role="alert">Новый</div></td>
+                    </tr>
+                    <tr>
+                        <th scope="row">2</th>
+                        <td>Клавиатура</td>
+                        <td>3 500</td>
+                        <td>2</td>
+                        <td>7 000</td>
+                        <td><div class="alert alert-warning" role="alert">Обработка</div></td>
+                    </tr>
+                    <tr>
+                        <th scope="row">3</th>
+                        <td>Телефон</td>
+                        <td>105 000</td>
+                        <td>3</td>
+                        <td>315 000</td>
+                        <td><div class="alert alert-success" role="alert">Обработан</div></td>
+                    </tr>
+                    <tr>
+                        <th scope="row">4</th>
+                        <td>Телевизор</td>
+                        <td>63 000</td>
+                        <td>1</td>
+                        <td>63 000</td>
+                        <td><div class="alert alert-danger" role="alert">Отмена</div></td>
+
+                    </tr>
+                    </tbody>
+                </table>
             </div>
 
 
@@ -395,6 +444,8 @@
             new bootstrap.Tooltip(tooltipTriggerEl)
         })
     })()
+
+
 
 
 
